--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/** 按钮 */
 body {
    background:url("../images/luoji_sy.jpg");  no-repeat center center;
    background-size:cover;
@@ -52,18 +53,18 @@ body {
 
 
 
-
-
-
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-.content {
-    flex: 1;
-}
+/** 顶部底部固定 */
 .footer {
-    flex: 0;
+  height: 20px;
+  text-align: center;
+  font-size: 12px;
+  color: #666;  
 }
 
+.abs-bottom {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
